<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000" >
	<TextView 
	    android:id="@+id/calc_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/calc_text"
		android:textColor="@android:color/white"
	    android:inputType="number" />
	
	<TableLayout 
	    android:id="@+id/calc_grid"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginTop="20pt"
	    android:layout_gravity="center">
	    <TableRow
	        android:id="@+id/calc_row1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        <Button 
	            android:id="@+id/bdig_1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_1"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_2"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_3"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/b_mul"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_mul"
	            android:layout_weight="1"/>
	    </TableRow>

	    <TableRow
	        android:id="@+id/calc_row2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        <Button 
	            android:id="@+id/bdig_4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_4"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_5"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_6"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/b_div"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_div"
	            android:layout_weight="1"/>
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/calc_row3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        <Button 
	            android:id="@+id/bdig_7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_7"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_8"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_9"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/b_sum"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_sum"
	            android:layout_weight="1"/>
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/calc_row4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        <Button 
	            android:id="@+id/b_dot"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_dot"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/bdig_0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_0"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/b_equal"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_equal"
	            android:layout_weight="1"/>
	        <Button 
	            android:id="@+id/b_minus"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_minus"
	            android:layout_weight="1"/>
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/calc_row5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center">
	        <Button 
	            android:id="@+id/button17"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:layout_weight="1"
	            android:visibility="invisible"/>
	        <Button 
	            android:id="@+id/button18"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:layout_weight="1"
	            android:visibility="invisible"/>
	        <Button 
	            android:id="@+id/button19"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text=""
	            android:layout_weight="1"
	            android:visibility="invisible"/>
	        <Button 
	            android:id="@+id/b_c"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/calc_c"
	            android:layout_weight="1"/>
	    </TableRow>
	</TableLayout>
</LinearLayout>
